public/styles/subscribe.css
form{
    display: inline-block;
}
#contactForm{
    width: 48%;
}
label{
  text-transform: lowercase;
  margin: 0;
}
form span{
    padding-left: 16px;
}
input{
    border: solid 0.5px #fff;
    height: 30px;
    background: transparent;
    color: white;
    padding-left: 8px;
    display: block;
    margin: 10px;
}

textarea{
    width: 80%;
    height: 87px;
    margin-left: 10px;
    padding-top: 8px;
    padding-left: 8px;
    background: transparent;
    color: white;
    border: 1px solid #fff;
}

input[type='text'],
input[type='email']{
    width: 300px;
    max-width: 80%;
}
::-webkit-input-placeholder{
    color: #fff;
    top: -3px;
    position: relative;
}
::-moz-placeholder{
    color: #fff;
    top: -3px;
    position: relative;
}
:-ms-input-placeholder{
    color: #fff;
    top: -3px;
    position: relative;
}
:-moz-placeholder {
    color: #fff;
    top: -3px;
    position: relative;
}

input[type='submit']{
  border: none;
  bottom: 0;
  cursor: pointer;
  margin-top: 0;
  color: #fff; 
}
div#jelly{
    margin-left: 23px;
    top: 8px;
    position: relative;
    background: url('/icons/jelly.svg') no-repeat top left;
    width: 18px;
    height: 23px;
    background-size: contain;
    margin-bottom: 0;
    display: inline-block;
}

div#jelly:hover{
    background: url('/icons/jelly_yellow.svg') no-repeat top left;
    width: 18px;
    height: 23px;
    background-size: contain;
    cursor: pointer;
}

div#jelly.error{
    background: url('/icons/jelly_yellow.svg') no-repeat top left;
}

.marker-error{
    background: #ff2700;
}

.error-network,
.error-message{
  color: #FF0000;
  display: none;
}

.success-message{
    color: #4D8A7C;
    display: none;
}

input.error,
textarea.error{
    border: 1px red solid;
    background: rgba(255, 0, 0, 0.05);
}

input:focus,
select:focus,
textarea:focus,
button:focus {
    outline: none;
}

